--- a/package.json
+++ b/package.json
@@ -5,11 +5,12 @@
   "type": "module",
   "scripts": {
     "dev": "vite",
-    "build": "vite build",
+    "build": "vite build && node custom-build/optimize-html.cjs",
     "preview": "vite preview"
   },
   "devDependencies": {
     "vite": "^5.4.2",
-    "vite-plugin-html": "^3.2.2"
+    "vite-plugin-html": "^3.2.2",
+    "vite-plugin-optimize-css-modules": "^1.1.0"
   }
 }
